--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
-<p><span class="style11"> <span class="red">[top]</span> I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
 
-<p><span class="style11">(21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/>(21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
 
-<p><span class="style11">(25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/>(25/01/2023) Two papers are accepted by the Web Conference (WWW'23). Many congrats to Yingguang, Dongcheng and Xiang! </span></p>
 
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
