--- a/publications.html
+++ b/publications.html
@@ -144,7 +144,7 @@ p{ margin:10px auto}
 <a href="paper/tc2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
+<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -219,7 +219,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/socc2019-perphon.pdf"> <img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
 
-<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">  &bull; H. Peng, J. Li, S. Wang, L. Wang, Q. Gong, R. Yang, B. Li, L. He and P. S. Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  <span class="red">(Highly Cited Paper)</span>
