--- a/publications_topics.html
+++ b/publications_topics.html
@@ -213,7 +213,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing (TSC), 2017 (IF=11.02, CCF-A) <a href="paper/tsc2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC), 2017 (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC), 2017 (IF=11.02, CCF-A) <a href="paper/tsc2016b.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">&bull; X. Ouyang, P. Garraghan, R. Yang, P. Townend, and J. Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
@@ -262,7 +262,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a><span class="red">(Hot Paper in ESI)</span>
 </span></p>
 
-<p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
+<p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> <span class="red">(Highly Cited Paper)</span>
 </span></p>
 
 <p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
