--- a/index.html
+++ b/index.html
@@ -81,26 +81,15 @@ p{ margin:10px auto}
 <title>Renyu YANG's Homepage</title>
 <body>
 
-<span class="STYLE15"> 
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;  <strong>Renyu Yang</strong> &nbsp; 
-<img src="icons/yin.gif" width="40" alt="Renyu" border="0" title="Renyu Yang" />  
-</span>
-
-<span class="STYLE15"> &nbsp;
-<img src="images/uol.jpg" width="130" alt="University of Leeds" border="0" title="University of Leeds" /> 
-<!--img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" /-->
-<img src="images/ati2.png" width="80"  alt="Alan Turing Institute" border="0" title="Alan Turing Institute" /> 
-<img src="images/lida.png" width="150" alt="LIDA" border="0" title="LIDA" /> 
-<img src="images/bdbc.png" width="160" alt="BDBC" border="0" title="BDBC" /> 
+<!--span class="STYLE15"> 
 <img src="images/beihang.jpg" width="150"  alt="Beihang University" border="0" title="Beihang University" />
-
-</span>
+<img src="images/bdbc.png" width="160" alt="BDBC" border="0" title="BDBC" /> 
+</span-->
 
 <br>
 <table style="width: 70%; height: auto;">
 <tbody>
 <tr>
-
 
 <td width="80" align="left" nowrap="" class="style12">
 <div align="left">
@@ -122,18 +111,20 @@ p{ margin:10px auto}
 <div align="left">
 &nbsp;
 </div>
+
+<span class="STYLE15"> 
+	&nbsp;&nbsp; <strong>Renyu Yang</strong> (杨任宇) &nbsp; 
+</span>
+
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lead Research Fellow</p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a></p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a></p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.leeds.ac.uk" style="text-decoration: none">University of Leeds</a>, UK </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; 3.25, Sir William Henry Bragg Building, Leeds, UK, LS2 9BW &nbsp;</p>
-
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; renyu.yang AT buaa DOT edu DOT cn (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
 <a href="https://www.linkedin.com/in/renyu-yang-096b5b60" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -198,7 +189,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (20/04/2023) Will present a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
 
 <p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
 
@@ -215,21 +206,21 @@ p{ margin:10px auto}
 
 <p class="Bolder"><img src="icons/bio-banner.png" width="25" height="25" border="0"/> Short Bio</p> 
 
-<p><span class="style11"> I am currently a lead Research Fellow funded by UK EPSRC, 
+<p><span class="style11"> I am now an associate professor at Beihang University. I was a lead Research Fellow funded by UK EPSRC, 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
 	<a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, 
 	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, 
-	University of Leeds, UK. I am also a visiting research scientist with the
-	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
-	Beijing, China. Prior to this, I was a research scientist at Edgetic Ltd., a UK-based high-tech spin-out company 
+	University of Leeds, UK. Prior to this, I was a research scientist at Edgetic Ltd., a UK-based high-tech spin-out company 
 	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
-	data center efficiency and intelligence. During 2014 to 2016, I was also with Alibaba Group, participating in the 
+	data center efficiency and intelligence. I was a research scientist and lead project manager with the
+	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
+	Beijing, China. During 2014 to 2016, I was also with Alibaba Group, participating in the 
 	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
 	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1,750+ citations, i10-index=34, h-index=20, by Feb. 2023), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1,900+ citations, i10-index=35, h-index=21, by April 2023), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
 	VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
@@ -238,7 +229,7 @@ p{ margin:10px auto}
 </span>
 
 <p><span class="style11"> I co-authored/co-led several national and international projects, including UK EPSRC, Innovate UK, 
-	EU Horizon 2020, UK Alan Turing Institute grants, China 973/863/Key R&D Programme, etc., worth more than £8 million over 
+	EU Horizon 2020, UK Alan Turing Institute Research Grants, China 973/863/Key R&D Programme, etc., worth more than £8 million over 
 	the last five years. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
 	Alibaba and Beihang University. I developed strong links with China-UK Computer 
 	Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, 
@@ -270,25 +261,30 @@ p{ margin:10px auto}
 <div id="div_exp">
 <p><span class="Bolder"><img src="icons/edu-banner.png" width="25" height="25" border="0"/> Education</span></p>
 
-<p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
-
 <p><span class="style11">&bull;  2011.9 - 2017.2: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), supervised by Prof. Jie Xu and Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; Exchange PhD. Student (funded by China 973 iVCE Grant and EPSRC CoLab Grant), supervised by Prof. Jie Xu and <a href="http://www.paultownend.com/" style="text-decoration: none">Dr. Paul Townend</a>, <a href="http://www.leeds.ac.uk" target="_blank" style="text-decoration: none"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
+<p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
+
 <p><span class="Bolder"><img src="icons/job-banner.png" width="25" height="25" border="0"/> Academia & Industry Experience</span></p>
 
-<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group and MSDS, Beihang University, Beijing, China </span></p> 
+<p><span class="style11">&bull; 2023.5 - present: &nbsp; Associate Professor, Beihang University, Beijing, China</span></p>
 
-<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Group</a>, Beijing, China </span></p>
+<p><span class="style11">&bull; 2020.9 - 2023.4: &nbsp; Lead Research Fellow, University of Leeds, UK</span></p> 
+
+<p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK and Adjunct Research Fellow at University of Leeds, Leeds, UK </span></p> 
+
+<p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), Lancaster University, Lancashire, UK </span></p> 
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), University of Edinburgh, Edinburgh, UK</span></p> 
 
 <p><span class="style11">&bull; 2017.3 - 2018.5: &nbsp; Research Scientist and Project Manager, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China</span></p>
  
-<p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), Lancaster University, Lancashire, UK </span></p> 
+<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Group</a>, Beijing, China </span></p>
 
-<p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK and Adjunct Research Fellow at University of Leeds, Leeds, UK </span></p> 
+<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group and MSDS, Beihang University, Beijing, China </span></p> 
+
 
 </div>
 
@@ -386,20 +382,19 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><img src="icons/supervision-banner.png" width="25" height="25" border="0"/> Student Supervision </span></p>
 
-
 <p><span class="style11"> 
 I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Hao Peng) </span></p>
-<p><span class="style11">&bull; PDRA Cohort: Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin, etc. </span></p>
-<p><span class="style11">&bull; BSc Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, Uni. of Leeds, with Prof. Jie Xu) </span></p>
+<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Hao Peng) </span></p>
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
-
+<p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin (Postdocs) </span></p>
+<p><span class="style11">&bull; Youmei Song (PhD., 2017.9- 2023.4, BDBC and Beihang Uni., with Prof. Tianyu Wo, first employment Postdoc)</span></p>
 <p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and Beihang Uni., with Prof. Chunming Hu, first employment Assistant Professor at NCEPU)</span></p>
 <p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
 <p><span class="style11">&bull; Yiming Hei (PhD., 2019.9-2022.1, BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng)
+<p><span class="style11">&bull; Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 <p><span class="style11">&bull; Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 
 <p><span class="style11">&bull; Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
@@ -514,7 +509,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by Feb 2023 </span></p>
+<p><span class="style11">Updated by May 2023 <img src="icons/yin.gif" width="30" alt="Renyu" border="0" title="Renyu Yang" /></span></p>
 
  
 	
