--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder"><!--img src="icons/news-banner.png" width="25" height="25" border="0"/--> What's New</p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">31 Oct 2023</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">April 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">15 Jan. 2024</span> </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">Janurary 2024</span> </span></p>
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
@@ -231,7 +231,7 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,300+ citations, h-index=22, by Dec. 2023), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,400+ citations, h-index=23, by Feb. 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
 	VLDB, ICDE, WWW, SC, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
@@ -341,7 +341,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 <span class="red">(CCF B/CORE A)</span> ACM SOSP 2017 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover.</a> IEEE TSC 2017 <span class="red">(CCF A, IF11.02)</span> </span></p>
+<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover.</a> IEEE TSC 2017 <span class="red">(CCF A)</span> </span></p>
 
 <p><span class="style11">&bull; <strong>More publications</strong>: 
 <a href="publications.html" style="text-decoration: none">[Complete List]</a> 
@@ -360,17 +360,19 @@ p{ margin:10px auto}
 <p><span class="style11">  
 I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
 
-<!--p><span class="style11">~$  <strong> grants -l </strong> </span></p-->
+<p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
 <p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
 
 <p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
-<p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by Advanced Multidisciplinary Research Programme, Beihang University, Key Member, 2024 - 2026  </span></p> 
+<p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Funding, Co-PI, 2023 - 2024  </span></p> 
+
+<p><span class="style11"> <strong> Closed </strong> </span></p>
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -502,7 +504,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Oct. 2023</span></p>
+<p><span class="style11">Updated by Feb. 2024</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
